feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1478,12 +1478,7 @@
       "\n",
       "If you have a problem using it, you can submit an issue: https://github.com/abgox/PSCompletions/issues\n",
       "\n",
-      "If <@Blue>PSCompletions<@Cyan> is helpful to you, please consider giving it a <@Yellow>Star<@>.",
-      "{{ if($PSCompletions.path.root -like \"$env:ProgramFiles*\") {",
-      "$info = '', '', '<@Yellow>PSCompletions warning:', '  Currently, it has been installed in the system-level directory, and to use it, you must run PowerShell with administrator mode.', '  Otherwise, please reinstall the module and specify <@Magenta>-Scope CurrentUser<@Yellow>', '';",
-      "$info -join \"`n\"",
-      "};",
-      "}}"
+      "If <@Blue>PSCompletions<@Cyan> is helpful to you, please consider giving it a <@Yellow>Star<@>."
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell Completions Manager\n",
