--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1480,12 +1480,7 @@
       "\n",
       "如果有使用问题, 请提交 issue: https://github.com/abgox/PSCompletions/issues\n",
       "\n",
-      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@>",
-      "{{ if($PSCompletions.path.root -like \"$env:ProgramFiles*\") {",
-      "$info = '', '', '<@Yellow>PSCompletions 模块警告:', '  当前，它被安装到了系统级目录中，使用它必须以管理员权限运行 PowerShell', '  否则，请重新安装模块，并指定 <@Magenta>-Scope CurrentUser<@Yellow>', '';",
-      "$info -join \"`n\"",
-      "};",
-      "}}"
+      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@>"
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理器\n",
