feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1503,16 +1503,18 @@
     },
     "module": {
       "update": [
-        "<@Yellow>PSCompletions module has new version: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Cyan>\n",
+        "<@Yellow>PSCompletions module has new version: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Blue>\n\n",
         "{{ ",
         "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
+        "$log = @();",
         "foreach($_ in $version_list) {",
         "   if($_.version -eq $PSCompletions.version){ break }",
-        "   \"`n<@Blue>$($_.version) : $($_.info.$($lang))\"",
+        "   $log += $_.info.$($lang) -join \"`n\"",
         "}",
-        "}}\n",
-        "------------------------------\n",
+        "$log -join \"`n\"",
+        "}}\n\n",
+        "<@Cyan>------------------------------\n",
         "Please manually update PSCompletions.\nThe following are the commands that may be needed.\n\n",
         "<@Magenta>Update-Module PSCompletions\n\n",
         "Update-PSResource PSCompletions\n\n",
