--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1505,16 +1505,18 @@
     },
     "module": {
       "update": [
-        "<@Yellow>PSCompletions 模块有新版本: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Cyan>\n",
+        "<@Yellow>PSCompletions 模块有新版本: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Blue>\n\n",
         "{{ ",
         "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
+        "$log = @();",
         "foreach($_ in $version_list) {",
         "   if($_.version -eq $PSCompletions.version){ break }",
-        "   \"`n<@Blue>$($_.version) : $($_.info.$($lang))\"",
+        "   $log += $_.info.$($lang) -join \"`n\"",
         "}",
-        "}}\n",
-        "------------------------------\n",
+        "$log -join \"`n\"",
+        "}}\n\n",
+        "<@Cyan>------------------------------\n",
         "请手动更新 PSCompletions，以下是可能需要的命令:\n\n",
         "<@Magenta>Update-Module PSCompletions\n\n",
         "Update-PSResource PSCompletions\n\n",
