--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -1432,6 +1432,20 @@
       ]
     }
   ],
+  "config": [
+    {
+      "name": "exclude_buckets",
+      "value": "",
+      "values": [
+        "\"main\"",
+        "\"main|extras\""
+      ],
+      "tip": [
+        "Buckets to be excluded when dynamically generating completions.\n",
+        "Multiple buckets are separated by |, for example \"aaa|bbb\""
+      ]
+    }
+  ],
   "info": {
     "tip": {
       "bucket": {
@@ -1454,15 +1468,5 @@
         ]
       }
     }
-  },
-  "config": [
-    {
-      "name": "exclude_buckets",
-      "value": "",
-      "tip": [
-        "Buckets to be excluded when dynamically generating completions.\n",
-        "Multiple buckets are separated by |, for example 'aaa|bbb'"
-      ]
-    }
-  ]
+  }
 }
