--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -1430,6 +1430,20 @@
       ]
     }
   ],
+  "config": [
+    {
+      "name": "exclude_buckets",
+      "value": "",
+      "values": [
+        "\"main\"",
+        "\"main|extras\""
+      ],
+      "tip": [
+        "动态生成补全时，要排除的 bucket\n",
+        "多个 bucket 使用 | 分割，例如 \"aaa|bbb\""
+      ]
+    }
+  ],
   "info": {
     "tip": {
       "bucket": {
@@ -1452,15 +1466,5 @@
         ]
       }
     }
-  },
-  "config": [
-    {
-      "name": "exclude_buckets",
-      "value": "",
-      "tip": [
-        "动态生成补全时，要排除的 bucket\n",
-        "多个 bucket 使用 | 分割，例如 'aaa|bbb'"
-      ]
-    }
-  ]
+  }
 }
