feat(scripts): update

--- a/scripts/language/en-US.json
+++ b/scripts/language/en-US.json
@@ -61,10 +61,10 @@
     ],
     "exist": "<@Red>The completion directory already exists!",
     "success": [
-      "<@Green>Create completion successfully!\n",
-      "The completion directory has been linked to the PSCompletions module.\n",
-      "Hooks have been added automatically, if not needed, please delete the <@Magenta>hooks<@Green> attribute in <@Magenta>config.json<@Green> and delete the <@Magenta>hooks.ps1<@Green> file.\n",
-      "Link Directory: <@Magenta>{{ $test_dir }}<@Green>\n",
+      "<@Green>Completion <@Magenta>{{ $completion_name }}<@Green> has been created successfully!\n",
+      "It has been linked to the PSCompletions module: <@Magenta>{{ $test_dir }}<@Green>\n",
+      "If hooks are not needed, please delete the <@Magenta>hooks<@Green> attribute in <@Magenta>config.json<@Green>, and relink the completion via <@Magenta>.\\scripts\\link-completion.ps1 {{ $completion_name }}<@Green>\n\n",
+      "<@Green>Suggestion: Please disable the completion cache via <@Magenta>psc config enable_cache 0<@Green> to preview the latest real-time changes.\n",
       "<@Yellow>Note: This link operation is only for the test or development of completion, and remove it via <@Magenta>psc rm {{ $completion_name }} <@Yellow>in time."
     ],
     "err": {
@@ -83,7 +83,8 @@
     ],
     "noExist": "<@Magenta>{{ $completion_name }}<@Red> isn't exist.",
     "linkDone": [
-      "<@Green>Completion <@Magenta>{{ $completion_name }}<@Green> has been linked to the completions directory of the PSCompletions module.\n",
+      "<@Green>Completion <@Magenta>{{ $completion_name }}<@Green> has been linked to the PSCompletions module: <@Magenta>{{ $test_dir }}<@Green>\n\n",
+      "<@Green>Suggestion: Please disable the completion cache via <@Magenta>psc config enable_cache 0<@Green> to preview the latest real-time changes.\n",
       "<@Yellow>Note: This link operation is only for the test or development of completion, and remove it via <@Magenta>psc rm {{ $completion_name }} <@Yellow>in time."
     ]
   },
