--- a/scripts/template/language/en-US.json
+++ b/scripts/template/language/en-US.json
@@ -18,7 +18,7 @@
         "--version"
       ],
       "tip": [
-        "U: -V, --version\n",
+        "U: -V, --version",
         "Show the version."
       ]
     }
@@ -30,7 +30,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h, --help\n",
+        "U: -h, --help",
         "Show the help."
       ]
     }
