--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -18,7 +18,7 @@
         "--version"
       ],
       "tip": [
-        "U: -V, --version\n",
+        "U: -V, --version",
         "显示版本信息。"
       ]
     }
@@ -30,7 +30,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h, --help\n",
+        "U: -h, --help",
         "显示帮助信息。"
       ]
     }
