--- a/scripts/language/zh-CN.json
+++ b/scripts/language/zh-CN.json
@@ -61,11 +61,11 @@
     ],
     "exist": "<@Red>补全目录已经存在!",
     "success": [
-      "<@Green>补全目录创建完成!\n",
-      "已将补全目录链接到 PSCompletions 模块中\n",
-      "已自动添加 hooks，如果不需要，请删除 <@Magenta>config.json<@Green> 中的 <@Magenta>hooks<@Green> 属性，并删除 <@Magenta>hooks.ps1<@Green> 文件\n",
-      "链接目录: <@Magenta>{{ $test_dir }}<@Green>\n",
-      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时通过 <@Magenta>psc rm {{ $completion_name }}<@Yellow> 移除它。"
+      "<@Green>补全 <@Magenta>{{ $completion_name }}<@Green> 创建完成!\n",
+      "已链接到 PSCompletions 模块中: <@Magenta>{{ $test_dir }}<@Green>\n",
+      "如果不需要 hooks，请删除 <@Magenta>config.json<@Green> 中的 <@Magenta>hooks<@Green> 属性，并通过 <@Magenta>.\\scripts\\link-completion.ps1 {{ $completion_name }}<@Green> 重新链接补全\n\n",
+      "<@Green>建议: 通过 <@Magenta>psc config enable_cache 0<@Green> 禁用补全缓存，以预览最新的实时更改\n",
+      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时通过 <@Magenta>psc rm {{ $completion_name }}<@Yellow> 移除它"
     ],
     "err": {
       "name": "<@Red>补全名称不能为空!"
@@ -83,8 +83,9 @@
     ],
     "noExist": "<@Magenta>{{ $completion_name }}<@Red> 不存在。",
     "linkDone": [
-      "<@Green>补全 <@Magenta>{{ $completion_name }}<@Green> 已经链接到 PSCompletions 模块的补全目录中。\n",
-      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时通过 <@Magenta>psc rm {{ $completion_name }}<@Yellow> 移除它。"
+      "<@Green>补全 <@Magenta>{{ $completion_name }}<@Green> 已链接到 PSCompletions 模块中: <@Magenta>{{ $test_dir }}<@Green>\n\n",
+      "<@Green>建议: 通过 <@Magenta>psc config enable_cache 0<@Green> 禁用补全缓存，以预览最新的实时更改\n",
+      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时通过 <@Magenta>psc rm {{ $completion_name }}<@Yellow> 移除它"
     ]
   },
   "publish-module": {
